# cafe_automation

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  run.py  temp.py
cafe/: login.kv  main.kv  main.py
cafe/cafe/: asgi.py  settings.py  urls.py
cafe/management/: models.py  views.py
cafe/ordering/: apps.py  models.py  validators.py  views.py
cafe/ordering/migrations/: 0003_alter_user_phone_number.py  0004_alter_cartitems_amount_alter_order_cart.py
client/: pyproject.toml  run.py
client/cafe/: api_requests.py  login.kv  login.py  main.kv  main.py
server/: pyproject.toml
server/cafe/cafe/: settings.py  urls.py  wsgi.py
server/cafe/management/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
server/cafe/management/migrations/: 0001_initial.py  0002_alter_category_category_alter_menu_image.py  0002_alter_menu_unique_together.py  0003_alter_menu_price.py  0004_alter_category_category_name_alter_menu_price.py  0005_cafeaddresses_socialmedialinks.py
server/cafe/ordering/: admin.py  backends.py  managers.py  models.py  serializers.py  urls.py  validators.py  views.py
server/cafe/ordering/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_orderstatus_paymenttype_alter_cart_options_and_more.py  0002_remove_user_date_joined.py  0003_alter_user_phone_number.py  0004_alter_user_phone_number.py  0005_alter_user_phone_number_alter_user_username.py  0006_user_first_name_user_last_name_alter_user_username.py
server/cafeapp/: manage.py
server/cafeapp/cafe/: models.py  serializers.py
server/cafeapp/cafe/migrations/: 0001_initial.py  0002_alter_category_options_alter_menu_options_and_more.py
server/cafeapp/cafeapp/: asgi.py  settings.py  urls.py  wsgi.py
