[tool.poetry]
name = "cafe"
version = "0.1.0"
description = ""
authors = ["Artyom_Vorozhbyanov <artyom.vorozhbyanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
djoser = "^2.1.0"
drf-nested-routers = "^0.93.4"
pillow = "^9.4.0"
flake8 = "^6.0.0"
flake8-import-order = "^0.18.2"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
drf-spectacular = "^0.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
